# jrtt

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
docs/superpowers/specs/: 2026-06-21-jrtt-design.md
src/jrtt/: __init__.py  __main__.py  cli.py  ipc.py  protocol.py  rtt_reader.py  spawn.py
src/jrtt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/jrtt/cli_cmds/: __init__.py  client.py  dump.py  ping.py  skill.py  status.py  stop.py  tail.py
src/jrtt/daemon/: __init__.py  daemon.py  reader.py  ring_buffer.py  subscriber.py
src/jrtt/jlink/: __init__.py  constants.py  dll.py  fake.py  fake_session.py  session.py  structs.py
tests/integration/: test_real_session.py
tests/unit/: test_ipc.py  test_protocol.py  test_reader.py  test_ring_buffer.py  test_rtt_reader.py  test_subscriber.py
