[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jrtt"
version = "0.0.1"
description = "CLI + daemon wrapper around SEGGER J-Link RTT, designed for AI agents"
requires-python = ">=3.10"
dependencies = [
    "pylink-square>=1.0,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff", "mypy"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "requires_hardware: requires a real J-Link probe + running target; skipped in CI",
]