[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jrtt"
version = "0.0.1"
description = "CLI + daemon wrapper around SEGGER J-Link RTT, designed for AI agents"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "pylink-square>=1.0,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/wangyu/jrtt"
Source = "https://github.com/wangyu/jrtt"

[project.scripts]
jrtt = "jrtt.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "requires_hardware: requires a real J-Link probe + running target; skipped in CI",
]