[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jrtt"
version = "0.0.1"
description = "CLI + daemon wrapper around SEGGER J-Link RTT, designed for AI agents"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "pylink-square>=1.0,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/yu1745/jrtt"
Source = "https://github.com/yu1745/jrtt"

[project.scripts]
jrtt = "jrtt.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# Make the repo itself a "skill repo" — the SKILL.md and LICENSE at the repo
# root get shipped with the wheel so `jrtt skill install` works after
# `pip install jrtt`, not just from a source checkout.
[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["SKILL.md", "LICENSE", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "requires_hardware: requires a real J-Link probe + running target; skipped in CI",
]